# OSC-nRT-RIC

./: .gitignore  .gitreview  .readthedocs.yaml  CMakeLists.txt  Cargo.toml  Dockerfile  INFO.yaml  Makefile.am  README  README.md  bench_test.go  configure.ac  container-tag.yaml  doc.go  go.mod  go.sum  new_script.py  osc_links.txt  qoe-aiml-assist.go  rmr-version.yaml  run-tests.sh.in  run_submgr.sh  script.py  sdl.go  sdl_private_fn_test.go  setup.py  split_sarif.py  syncstorage.go  syncstorage_test.go  tox.ini  update_repo.sh  urls.sh
.github/workflows/: continuous_sca_scannig.yaml  continuous_sca_scanning.yaml  gerrit-merge.yaml  gerrit-novote-merge.yaml  grype.yaml  snyk.yaml  trivy.yaml
agent/: Makefile  build_o1agent.sh  go.mod  go.sum
agent/cli/: o1-cli.go
agent/config/: config-file.json  uta_rtg.rt
agent/test/: o1-create-xapp.xml
agent/yang/: o-ran-sc-ric-alarm-v1.yang
alarm/: alarm_test.go  go.mod  utils.c
charts/dbaas-test/: values.yaml
ci/: Dockerfile  ci_build.sh  ci_test.sh  publish.sh
cli/: alarm-cli.go
cmake/: cxx1.cmake
cmd/: a1.go
config/: config-file.json  config.yaml  schema.json  submgr-config.yaml  uta_rtg.rt
control/: control.go
data/: types.go
debian/: changelog.in  control
definitions/: alarm-definition.json  sample.json
docker/: Dockerfile.redis  Dockerfile.testapp
docs/: README  conf.yaml  developer-guide.rst  index.rst  installation-guide.rst  mgxapp_rel_notes.rst  overview.rst  release-notes.rst  user-guide-RMR.rst  user-guide.rst
e2ap/: e2ap-v100.asn1
example/: example.go
examples/: Makefile
include/private/: abort.hpp  asyncconnection.hpp  asyncstorageimpl.hpp  databaseconfigurationimpl.hpp  engineimpl.hpp  error.hpp  filedescriptor.hpp  logger.hpp  namespaceconfiguration.hpp  namespacevalidator.hpp  stdstreamlogger.hpp  system.hpp  timer.hpp  timerfd.hpp
include/sdl/: asyncstorage.hpp  doxygen.hpp  exception.hpp  operationinterrupted.hpp  rejectedbybackend.hpp  rejectedbysdl.hpp  syncstorage.hpp
include/tracelibcpp/: tracelibcpp.hpp
influx/mocks/: mock_influx_client.go  mock_query_api.go
integration_tests/: portforward.sh
integration_tests/a1mediator/: Chart.yaml
integration_tests/testreceiver/: Chart.yaml  values.yaml
integration_tests/testxappcode/: Dockerfile-delay-receiver  Dockerfile-query-receiver  delay-config-file.yaml  go.mod  query-config-file.yaml  test-config-file.yaml
internal/cli/: get.go  get_test.go  healthcheck_test.go  keys_test.go  namespaces.go  namespaces_test.go  remove_test.go  root.go  root_test.go  statistics.go  types_test.go  utils.go
mc-core/: container-tag.yaml  container_start.sh
mgxapp/: CHANGES  CMakeLists.txt
mgxapp/doc/src/: master.mk
mgxapp/doc/src/lib/: front_junk.im  license.im
mgxapp/doc/src/rel_notes/: gen_rel_notes.sh
mgxapp/doc/src/user_guide/: Makefile
mgxapp/lib/: CMakeLists.txt  context.h  rthing.h  symtab.cpp  symtab.h  ves_msg.h
mgxapp/src/: CMakeLists.txt  Makefile
mgxapp/test/: Makefile  config_test.cpp  context_test.cpp  rthing_test.cpp  unit_test.sh  ut_support.cpp
mgxapp/test/data/: config2.json  config3.json
proto/: rrc_cg_config_info.proto  rrc_common_types.proto  rrc_general_message_types.proto  rrc_measurement_report.proto  rrc_reconfiguration_complete.proto  rrctransfer.proto  sgnb_activity_notification.proto  sgnb_addition_request_acknowledge.proto  sgnb_addition_request_reject.proto  sgnb_change_confirm.proto  sgnb_change_refuse.proto  sgnb_change_required.proto  sgnb_modification_confirm.proto  sgnb_modification_request_acknowledge.proto  sgnb_modification_request_reject.proto  sgnb_modification_required.proto  sgnb_reconfiguration_complete.proto  sgnb_release_request.proto  ue_context_release.proto  x2ap_common_types.proto  x2ap_streaming.proto
releases/: container-release-app-hw-rust.yaml  container-release-mc.yaml  container-release-ric-app-ad-cell.yaml  container-release-ric-plt-a1.yaml  container-release-ric-plt-submgr.yaml
resources/: pod.yaml
ric-app-ad-cell/: Dockerfile  INFO.yaml
ric-app-hw-rust/: Cargo.toml  INFO.yaml
ric-app-mc/: .gitreview  LICENSE  NOTES  container-tag.yaml
ric-app-qp-aimlfw/: .gitreview  Dockerfile  INFO.yaml  go.mod  go.sum
ric-plt-a1/: .gitreview  Dockerfile  INFO.yaml  LICENSE.txt  a1-entrypoint.sh  container-tag.yaml  go.mod  local.rt
ric-plt-alarm-go/: .gitreview
ric-plt-asn1-documents/: INFO.yaml  LICENSE.txt
ric-plt-dbaas/: INFO.yaml  tox.ini
ric-plt-o1/: .gitreview  Dockerfile  container-tag.yaml
ric-plt-sdl/: .gitignore  Doxyfile.in  README.md  libsdl.pc.in
ric-plt-sdlgo/: go.mod  go.sum  sdl_test.go  tox.ini
ric-plt-sdlpy/: .gitreview  .readthedocs.yaml  INFO.yaml  README.md
ric-plt-streaming-protobufs/: INFO.yaml  LICENSE.txt
ric-plt-submgr/: README.md  RELNOTES  go.sum
ric-plt-tracelibcpp/: .gitreview  INFO.yaml  README.md
ric-plt-tracelibgo/: .gitignore  INFO.yaml  README.md
ric-plt-utils/: .gitattributes  INFO.yaml  README  tox.ini
ricsdl-package/: pom.xml
schemaparser/: README.txt  json.h  mc_store_schema.cc  nib.json  sample2.cc  schemaparser.cc
schemas/: alarm-schema.json
src/: databaseconfiguration.cpp  emptynamespace.cpp  engine.cpp  engineimpl.cpp  exception.cpp  filedescriptor.cpp  hw-rust.rs  main.py  namespacevalidator.cpp  notconnected.cpp  operationinterrupted.cpp  publisherid.cpp  system.cpp  systemlogger.cpp  timer.cpp  tracelib.cpp
test/: config-file.json
testresources/: perf-alarm-definition-delay.json  perf-alarm-definition.json  perf-alarm-object.json
tst/: abort_test.cpp  asyncstorage_test.cpp  backenderror_test.cpp  contents_test.cpp  contentsbuilder_test.cpp  databaseconfiguration_test.cpp  emptynamespace_test.cpp  engine_test.cpp  engineimpl_test.cpp  error_test.cpp  errorqueries_test.cpp  hiredisclusterepolladapter_test.cpp  hiredisclustersystem_test.cpp  hiredisepolladapter_test.cpp  hiredissystem_test.cpp  namespaceconfigurations_test.cpp  namespacevalidator_test.cpp  redisreplybuilder.cpp  reply_test.cpp  syncstorage_test.cpp  timer_test.cpp  timerfd_test.cpp
xapp-descriptor/: config.json
(+755 files in other folders)
