[package]
name = "hw-rust"
version = "0.3.0"
edition = "2018"
description = "A Hello World Rust xApp using the Xapp Rust SDK (xapp-frame-rust) from ORAN SC."
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["o-ran", "xapp"]
categories = ["development-tools", "network-programming"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
# TODO : Add a proper tag when we are ready to release.
# And remove the commented dependencies in local path used during testing
xapp = { git = "https://gerrit.o-ran-sc.org/r/ric-plt/xapp-frame-rust" }
#xapp = { path = "../xapp-frame-rust/xapp" }
rmr = { git = "https://gerrit.o-ran-sc.org/r/ric-plt/xapp-frame-rust" }
#rmr = { path = "../xapp-frame-rust/rmr" }
ric-subscriptions = { git = "https://gerrit.o-ran-sc.org/r/ric-plt/xapp-frame-rust" }
#ric-subscriptions = { path = "../xapp-frame-rust/subscription-api" }
rnib = { git = "https://gerrit.o-ran-sc.org/r/ric-plt/xapp-frame-rust" }
#rnib = { path = "../xapp-frame-rust/rnib" }
registration-api = { git = "https://gerrit.o-ran-sc.org/r/ric-plt/xapp-frame-rust" }
#registration-api = { path = "../xapp-frame-rust/registration-api" }

serde_json = { version = "1.0" }


[[bin]]
name = "hw-rust"
path = "src/hw-rust.rs"

